# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md
shaders/: mandelbrot.frag
src/: main.cpp
